<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutCompanyActivity">

    <LinearLayout
        style="@style/MyLinearLayoutVertical">

        <LinearLayout
            android:gravity="center"
            style="@style/MyLinearLayoutVertical">

            <ImageView
                android:background="@drawable/mylogo"
                style="@style/MyImageViewAboutCompany"/>

            <TextView
                style="@style/MyTextViewPrimary"
                android:text="@string/nameCompany"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="25dp"
            style="@style/MyLinearLayoutHorizontal">

            <TextView
                style="@style/MyTextViewSecondary"
                android:text="@string/site"/>

            <TextView
                android:id="@+id/textViewLinkSiteCompany"
                android:layout_marginLeft="5dp"
                style="@style/MyTextViewLink"
                android:text="@string/linkSiteCompany"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>