<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutProductActivity">

    <LinearLayout
        style="@style/MyLinearLayoutVertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageViewAboutProduct"
            style="@style/MyImageViewAboutProduct" />

        <View
            android:layout_margin="3dp"
            style="@style/myDivider" />

        <LinearLayout
            style="@style/MyLinearLayoutVertical">

            <LinearLayout
                style="@style/MyLinearLayoutHorizontal">

                <TextView
                    android:text="@string/id"
                    style="@style/MyTextViewSecondary" />

                <TextView
                    android:id="@+id/textViewId"
                    style="@style/MyTextViewPrimary"/>

            </LinearLayout>

            <LinearLayout
                android:paddingTop="10dp"
                style="@style/MyLinearLayoutHorizontal">

                <TextView
                    android:text="@string/name"
                    style="@style/MyTextViewSecondary" />

                <TextView
                    android:id="@+id/textViewName"
                    style="@style/MyTextViewPrimary"/>

            </LinearLayout>

            <LinearLayout
                android:paddingTop="10dp"
                style="@style/MyLinearLayoutHorizontal">

                <TextView
                    android:text="@string/description"
                    style="@style/MyTextViewSecondary" />

                <TextView
                    android:id="@+id/textViewDesc"
                    style="@style/MyTextViewPrimary"/>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

</ScrollView>